app/assets/stylesheets/custom.css
body{
	margin: 20px;
}
.searchbar{
	float: right;
	margin-bottom: 10px;
}

.leftpanel{
	float: left;
	width: 300px;
	height: 800px;
}

.categories{
	background-color: #edeceb;
	border-radius: 5px;
	padding: 10px;
	margin-bottom: 5px;

}

.rightpanel{
	padding: 10px;
	margin: 20px;
	margin-left: 100px;
	width: 900px;

}

#companies{
	margin-top: 20px;
}

.entry{
	padding: 10px;
	margin-bottom: 20px;
	background-color: #F8F8F8 ;
	border-radius: 5px;
}

.description{
	word-wrap: break-word;
}

#companyinfo{
	word-wrap: break-word;
	text-align: center;
	width: 500px;
	float: left;
}

.company{
	margin-top: 10px;
	padding: 10px;
	background-color: #F8F8F8 ;
	border-radius: 5px;
	width: 600px;
}

.partner-form {
	float: left;
	text-allign: left;
	width: 300px;
	margin-top: 10px;
	padding: 10px;
	background-color: #F8F8F8 ;
	border-radius: 5px;
}
#reviews{
/*	margin: 10px;
*/}
.review{
	margin-top: 10px;
	padding: 10px;
	background-color: #F8F8F8 ;
	border-radius: 5px;
	width: 520px;
}

#reviewform{
	margin-left: 500px;
}

.toppanel{
	height: 400px;
}
.mainpanel{
	margin-left: 20%;
	width: 700px;
}

#discussionentry{
	width: 600px;
}

.customButton{
	min-width: 150px;
	box-shadow: none;
	background-color: #1ABC9C;
	border: none;
	color: white;
	border-radius: 5px;
	margin-bottom: 10px;
}

.cancelButton{
	min-width: 150px;
	box-shadow: none;
	background-color: #C2C2C2;
	border: none;
	color: white;
	border-radius: 5px;
}

.partners{
	margin-right: 20px;
	margin-top: 0px;
	float:right;
	text-align: right;
}
#partners{
	text-align: right;
	margin-left: 0px;
}

a:hover{
	text-decoration: none;
	background-color: transparent;
	color: #C0392B;
}

.form-signin {
	text-align: center;
	max-width: 300px;
	padding: 19px 29px 29px;
	margin: 0 auto 20px;
	background-color: #fff;
	border: 1px solid #e5e5e5;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
	box-shadow: 0 1px 2px rgba(0,0,0,.05);
}
.form-signin input{
	width: inherit;
}


.form-signin textarea,
.uneditable-input {
	width: inherit;
   }
.form-signin .form-signin-heading,
.form-signin .checkbox {
	margin-bottom: 10px;
}
.form-signin input[type="text"],
.form-signin input[type="password"] {
	font-size: 16px;
	height: auto;
	margin-bottom: 15px;
	padding: 7px 9px;
}

.navbar .brand{
	font-weight: none;
	text-shadow:none;
	color: #1ABC9C;
	padding: 0;
	padding-top: 5px;
	font-size: 30px;
}
.navbar .nav li a{
	text-shadow:none;
	color: #ECF0F1;
	font-weight: none;
}

